--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,5 +2,7 @@
 current_version = 0.1.1
 commit = True
 tag = True
+tag_name = {new_version}
 
 [bumpversion:file:VERSION]
+[bumpversion:file:UIKitZen.podspec]
