--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -6,4 +6,4 @@ tag_name = "{new_version}"
 message = "Use the Force, Luke. Bump version: {current_version} → {new_version}"
 
 [[tool.bumpversion.files]]
-filename = "UIKitZen.podspec"
+filename = "UIKitX.podspec"
